vlib/v/checker/tests/globals/redefine_main.vv
__global main = fn () int { return 22 }
